# storm-project-starter-python

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: buildtest.yml  formatapply.yml  formatcheck.yml
stormpy_starter/: check.py
tests/: test_starter.py
